<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_pure"
    android:orientation="vertical"
    tools:context="com.blackcat.coach.activities.LoginActivity">


    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="42dp"
        android:layout_marginTop="54dp"
        android:src="@mipmap/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/background_border"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="1dp">

            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:src="@mipmap/ic_login_phone" />

            <EditText
                android:id="@+id/et_phonenum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="47dp"
                android:background="@null"
                android:hint="@string/login_user_name"
                android:inputType="phone"
                android:singleLine="true"
                android:maxLength="11"
                android:textColor="#333333"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e6e6e6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:src="@mipmap/ic_login_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="47dp"
                android:background="@null"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#999999"
                android:textSize="15sp" />
        </RelativeLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/blue"
        android:text="@string/login_login"
        android:textColor="@color/white_pure"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/login_forget_password"
            android:textColor="#666666"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/login_register_account"
            android:textColor="#2879f3"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>
